--- a/static-to-dynamic-WebpageCreation.html
+++ b/static-to-dynamic-WebpageCreation.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="static to dynamic webpageCreation.css">
 </head>
 <body>
+<!--     
+    this is static webpage created by html and css, dynamically i have created the same webpage using JavaScript DOM manipulation
     <div class="bg-container">
         <h1 class="heading">
             Grocery List
@@ -27,7 +29,7 @@
         <button class="btn btn-primary">
         proceed to pay
         </button>
-    </div>
+    </div> -->
 
 
 
